# rez-setuptools

./: CMakeLists.txt  README.md  install.sh  package.py
